AF-2833 : Conscious language initiative kie-wb-common and kie-wb-playground
 * Changed restrictive terms with low impact

--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants.properties
@@ -16,7 +16,7 @@
 
 OpenShiftProviderConfigView.ProviderType=Provider Type
 OpenShiftProviderConfigView.ProviderName=Provider Name
-OpenShiftProviderConfigView.MasterURL=Master URL
+OpenShiftProviderConfigView.MainURL=Main URL
 OpenShiftProviderConfigView.UserName=Username
 OpenShiftProviderConfigView.Password=Password
 
