--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_es.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_es.properties
@@ -16,7 +16,7 @@
 
 OpenShiftProviderConfigView.ProviderType=Tipo de proveedor
 OpenShiftProviderConfigView.ProviderName=Nombre del proveedor
-OpenShiftProviderConfigView.MasterURL=URL principal
+OpenShiftProviderConfigView.MainURL=URL principal
 OpenShiftProviderConfigView.UserName=Nombre de usuario
 OpenShiftProviderConfigView.Password=Contraseña
 
