--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_fr.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_fr.properties
@@ -16,7 +16,7 @@
 
 OpenShiftProviderConfigView.ProviderType=Type de fournisseur
 OpenShiftProviderConfigView.ProviderName=Nom du fournisseur
-OpenShiftProviderConfigView.MasterURL=URL principale
+OpenShiftProviderConfigView.MainURL=URL principale
 OpenShiftProviderConfigView.UserName=Nom d''utilisateur
 OpenShiftProviderConfigView.Password=Mot de passe
 
