--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
@@ -38,6 +38,7 @@ MarshallingMessage.elementFailure=Failure on element {0} of type {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Data Object Exists with Same Name and Different Type - Will be Changed to (Object)
 MarshallingMessage.dataObjectWithName=Data Object-Name
 MarshallingMessage.dataObjectWithInvalidName=Data Object with Invalid Name Exists. Illegal chars will be replaced by -
+MarshallingMessage.reusableSubprocessWithoutDataIO=Reusable Subprocess with no Assignments Data Input/Data Output
 
 SessionCardinalityStateHandler.EmptyStateCaption=Click, drag or interact with a node
 SessionCardinalityStateHandler.EmptyStateMessage=To start, click or drag a node in the left-hand palette onto the canvas
